src/infrastructure/base/app-patches/ingress-origin-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: root-ingress-cloudflare-or-cluster
  namespace: tenant-root
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: ingress-nginx
      app.kubernetes.io/component: controller
  policyTypes:
    - Ingress
  ingress:
    - from:
        - ipBlock:
            cidr: 173.245.48.0/20
        - ipBlock:
            cidr: 103.21.244.0/22
        - ipBlock:
            cidr: 103.22.200.0/22
        - ipBlock:
            cidr: 103.31.4.0/22
        - ipBlock:
            cidr: 141.101.64.0/18
        - ipBlock:
            cidr: 108.162.192.0/18
        - ipBlock:
            cidr: 190.93.240.0/20
        - ipBlock:
            cidr: 188.114.96.0/20
        - ipBlock:
            cidr: 197.234.240.0/22
        - ipBlock:
            cidr: 198.41.128.0/17
        - ipBlock:
            cidr: 162.158.0.0/15
        - ipBlock:
            cidr: 104.16.0.0/13
        - ipBlock:
            cidr: 104.24.0.0/14
        - ipBlock:
            cidr: 172.64.0.0/13
        - ipBlock:
            cidr: 131.0.72.0/22
        - ipBlock:
            cidr: 2400:cb00::/32
        - ipBlock:
            cidr: 2606:4700::/32
        - ipBlock:
            cidr: 2803:f800::/32
        - ipBlock:
            cidr: 2405:b500::/32
        - ipBlock:
            cidr: 2405:8100::/32
        - ipBlock:
            cidr: 2a06:98c0::/29
        - ipBlock:
            cidr: 2c0f:f248::/32
      ports:
        - port: 80
          protocol: TCP
        - port: 443
          protocol: TCP
    - from:
        - ipBlock:
            cidr: 10.8.0.0/24
        - ipBlock:
            cidr: 10.244.0.0/16
        - ipBlock:
            cidr: 100.64.0.0/16
